tests/positive/test-success-printint-3.rooc
// Test with a small negative integer
fun main() -> int {
    print_int(-1);
    return 0;
}
