tests/negative/test-fail-scope1.rooc
fun main()->int{
    print_int(x);
    var x:int=1;
    // TODO: redesign the err report

    return 0;
}